Bug 337871 r+sr=roc Screen jumps around with multiple textboxes and spellchecking